keycloak-ingress-ishirock.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sso-ishirock
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - sso.ishirock.com
    secretName: sso-ishirock
  rules:
  - host: sso.ishirock.com
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 8080
