keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  tls:
  - hosts:
    - sso.4b283f3f58a749c38a6f.southeastasia.aksapp.io
    secretName: sso-tls-secret
  rules:
  - host: sso.4b283f3f58a749c38a6f.southeastasia.aksapp.io
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
