keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
    - port: 8443
      name: https
      targetPort: 8443
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  tls:
  - hosts:
    - sso.e8c78187f8d844399c4d.southeastasia.aksapp.io
    secretName: sso-tls-secret
  rules:
  - host: sso.e8c78187f8d844399c4d.southeastasia.aksapp.io
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
